# Models/Responses/DetalleCuotaResponse.cs
@@ -9,4 +9,7 @@ public class DetalleCuotaResponse
     public DateTime FechaVencimiento { get; set; }
     public string? EstadoCodigo { get; set; }
     public bool EsRefuerzo { get; set; }
+    public int? IdRefuerzo { get; set; }              // nullable para cuotas
+    public decimal? MontoRefuerzo { get; set; }       // nullable para cuotas
+    public DateTime? FechaVencimientoRefuerzo { get; set; } // nullable para cuotas
 }
